(Refactor): Improved documentation with Swagger
